--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,46 @@
 /* Add styling for your page here */
 
 .App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 5em;
+    margin-right: 5em;
+}
 
+.Pastries {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.Cart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .BakeryItem {
-  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 15em;
+    height: auto;
+    padding-bottom: 1em;
+}
+
+.AddToCart {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#item-img {
+    max-width: 15em;
+    height: auto;
+}
+
+#text {
+    text-align: center;
 }
